openjdk23/jdk/test/langtools/tools/javac/annotations/neg/Dep.java
/*
 * StarshipOS Copyright (c) 2025. R.A. James
 */

/** @deprecated */
class Dep {
}
